--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hamburger Pizza Taco</title>
+    <title>Vandelay Industries Train Schedule</title>
 
     <link href="https://fonts.googleapis.com/css?family=Comfortaa|Monoton|Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -24,6 +24,7 @@
         <!-- Jumbotron -->
         <div class="jumbotron">
             <h1 class="text-center">Train Schedule</h1>
+            <h2>Presented By: Vandelay Industries</h2>
             <div id="current-time"></div>
         </div>
         <div class="container">
@@ -51,7 +52,7 @@
                 </div>
             </div>
 
-            <div class="container col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+            <div class="container col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
 
                 <div class="card card-primary" id="input-container">
                     <div class="card-heading">
